Fix color contrast #176

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,7 +8,7 @@ $panel-default-heading-bg: #e8e8e8;
 $panel-default-border: #d6d6d6;
 $textcolor-light: #767676;
 $brand-primary: #2570B0;
-$navbar-default-link-color: #727272;
+$navbar-default-link-color: #6E6E6E;
 $font-size-base: 16px;
 $panel-body-padding: 7px 15px;
 $gray-light: #767676;
